---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(r#\"\n                        SELECT sum(*)\n                        FROM (\n                            SELECT non_negative_difference(sum(/usage_.*/))\n                            FROM cpu\n                            WHERE time >= 0s AND time < 10m\n                            GROUP BY time(1m), cpu\n                            OFFSET 1\n                        )\n                        WHERE time >= 0s AND time < 10m\n                        GROUP BY time(1m), cpu\n                    \"#)"
---
Sort: cpu AS cpu ASC NULLS LAST, time ASC NULLS LAST [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None);N, cpu:Dictionary(Int32, Utf8);N, sum_non_negative_difference_usage_idle:Float64;N, sum_non_negative_difference_usage_system:Float64;N, sum_non_negative_difference_usage_user:Float64;N]
  Projection: Dictionary(Int32, Utf8("cpu")) AS iox::measurement, time, cpu AS cpu, sum(non_negative_difference_usage_idle) AS sum_non_negative_difference_usage_idle, sum(non_negative_difference_usage_system) AS sum_non_negative_difference_usage_system, sum(non_negative_difference_usage_user) AS sum_non_negative_difference_usage_user [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None);N, cpu:Dictionary(Int32, Utf8);N, sum_non_negative_difference_usage_idle:Float64;N, sum_non_negative_difference_usage_system:Float64;N, sum_non_negative_difference_usage_user:Float64;N]
    GapFill: series=[cpu], time=date_bin_wallclock(IntervalMonthDayNano("IntervalMonthDayNano { months: 0, days: 0, nanoseconds: 60000000000 }"), time, TimestampNanosecond(0, None)), fill=[sum(non_negative_difference_usage_idle), sum(non_negative_difference_usage_system), sum(non_negative_difference_usage_user)], range=Included(Literal(TimestampNanosecond(0, None), None))..Included(Literal(TimestampNanosecond(599999999999, None), None)) [cpu:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None);N, sum(non_negative_difference_usage_idle):Float64;N, sum(non_negative_difference_usage_system):Float64;N, sum(non_negative_difference_usage_user):Float64;N]
      Aggregate: groupBy=[[date_bin_wallclock(IntervalMonthDayNano("IntervalMonthDayNano { months: 0, days: 0, nanoseconds: 60000000000 }"), time, TimestampNanosecond(0, None)) AS time, cpu]], aggr=[[sum(non_negative_difference_usage_idle), sum(non_negative_difference_usage_system), sum(non_negative_difference_usage_user)]] [time:Timestamp(Nanosecond, None);N, cpu:Dictionary(Int32, Utf8);N, sum(non_negative_difference_usage_idle):Float64;N, sum(non_negative_difference_usage_system):Float64;N, sum(non_negative_difference_usage_user):Float64;N]
        Sort: cpu ASC NULLS LAST, time ASC NULLS LAST [time:Timestamp(Nanosecond, None);N, cpu:Dictionary(Int32, Utf8);N, non_negative_difference_usage_idle:Float64;N, non_negative_difference_usage_system:Float64;N, non_negative_difference_usage_user:Float64;N]
          SeriesLimit: series=[cpu], order=[time ASC NULLS LAST], limit_expr=[non_negative_difference_usage_idle IGNORE NULLS (default: Float64(NULL)), non_negative_difference_usage_system IGNORE NULLS (default: Float64(NULL)), non_negative_difference_usage_user IGNORE NULLS (default: Float64(NULL))], skip=UInt64(1) [time:Timestamp(Nanosecond, None);N, cpu:Dictionary(Int32, Utf8);N, non_negative_difference_usage_idle:Float64;N, non_negative_difference_usage_system:Float64;N, non_negative_difference_usage_user:Float64;N]
            Projection: time, cpu.cpu AS cpu, non_negative_difference(sum(cpu.usage_idle)) AS non_negative_difference_usage_idle, non_negative_difference(sum(cpu.usage_system)) AS non_negative_difference_usage_system, non_negative_difference(sum(cpu.usage_user)) AS non_negative_difference_usage_user [time:Timestamp(Nanosecond, None);N, cpu:Dictionary(Int32, Utf8);N, non_negative_difference_usage_idle:Float64;N, non_negative_difference_usage_system:Float64;N, non_negative_difference_usage_user:Float64;N]
              Filter: non_negative_difference(sum(cpu.usage_idle)) IS NOT NULL OR non_negative_difference(sum(cpu.usage_system)) IS NOT NULL OR non_negative_difference(sum(cpu.usage_user)) IS NOT NULL [time:Timestamp(Nanosecond, None);N, cpu:Dictionary(Int32, Utf8);N, sum(cpu.usage_idle):Float64;N, sum(cpu.usage_system):Float64;N, sum(cpu.usage_user):Float64;N, non_negative_difference(sum(cpu.usage_idle)):Float64;N, non_negative_difference(sum(cpu.usage_system)):Float64;N, non_negative_difference(sum(cpu.usage_user)):Float64;N]
                WindowAggr: windowExpr=[[non_negative_difference(sum(cpu.usage_idle)) PARTITION BY [cpu.cpu] ORDER BY [time ASC NULLS LAST] ROWS BETWEEN UNBOUNDED PRECEDING AND UNBOUNDED FOLLOWING AS non_negative_difference(sum(cpu.usage_idle)), non_negative_difference(sum(cpu.usage_system)) PARTITION BY [cpu.cpu] ORDER BY [time ASC NULLS LAST] ROWS BETWEEN UNBOUNDED PRECEDING AND UNBOUNDED FOLLOWING AS non_negative_difference(sum(cpu.usage_system)), non_negative_difference(sum(cpu.usage_user)) PARTITION BY [cpu.cpu] ORDER BY [time ASC NULLS LAST] ROWS BETWEEN UNBOUNDED PRECEDING AND UNBOUNDED FOLLOWING AS non_negative_difference(sum(cpu.usage_user))]] [time:Timestamp(Nanosecond, None);N, cpu:Dictionary(Int32, Utf8);N, sum(cpu.usage_idle):Float64;N, sum(cpu.usage_system):Float64;N, sum(cpu.usage_user):Float64;N, non_negative_difference(sum(cpu.usage_idle)):Float64;N, non_negative_difference(sum(cpu.usage_system)):Float64;N, non_negative_difference(sum(cpu.usage_user)):Float64;N]
                  Aggregate: groupBy=[[date_bin_wallclock(IntervalMonthDayNano("IntervalMonthDayNano { months: 0, days: 0, nanoseconds: 60000000000 }"), cpu.time, TimestampNanosecond(0, None)) AS time, cpu.cpu]], aggr=[[sum(cpu.usage_idle), sum(cpu.usage_system), sum(cpu.usage_user)]] [time:Timestamp(Nanosecond, None);N, cpu:Dictionary(Int32, Utf8);N, sum(cpu.usage_idle):Float64;N, sum(cpu.usage_system):Float64;N, sum(cpu.usage_user):Float64;N]
                    Filter: cpu.time >= TimestampNanosecond(0, None) AND cpu.time <= TimestampNanosecond(599999999999, None) [cpu:Dictionary(Int32, Utf8);N, host:Dictionary(Int32, Utf8);N, region:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None), usage_idle:Float64;N, usage_system:Float64;N, usage_user:Float64;N]
                      Filter: cpu.usage_idle IS NOT NULL OR cpu.usage_system IS NOT NULL OR cpu.usage_user IS NOT NULL [cpu:Dictionary(Int32, Utf8);N, host:Dictionary(Int32, Utf8);N, region:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None), usage_idle:Float64;N, usage_system:Float64;N, usage_user:Float64;N]
                        TableScan: cpu [cpu:Dictionary(Int32, Utf8);N, host:Dictionary(Int32, Utf8);N, region:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None), usage_idle:Float64;N, usage_system:Float64;N, usage_user:Float64;N]
